# insight

./: .env.local.example  .gitignore  DEVLOG.md  IDENTITY_RESOLUTION.md  README.md  cleanup.sh  dev-down.sh  dev-restart.sh  dev-up.sh  helmfile.yaml.gotmpl  init.sh  up.sh
.github/workflows/: backend-checks.yml  build-images.yml
charts/insight/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
cypilot/.core/: whatsnew.toml
cypilot/config/: AGENTS.md  artifacts.toml
deploy/: values-dev.yaml
deploy/airbyte/: README.md  values.yaml
deploy/argo/: README.md  rbac-insight.yaml  rbac.yaml  values-dev.yaml  values.yaml
deploy/gitops/: README.md  airbyte-application.yaml  argo-application.yaml  argo-rbac-application.yaml  insight-application.yaml  insight-values.example.yaml  root-app.yaml
deploy/scripts/: install-airbyte.sh  install-argo.sh  install-insight.sh  install.sh
docs/: SPEC_REGISTRY.md
docs/architecture/: CONNECTORS_ARCHITECTURE.md  CONNECTOR_AUTOMATION.md  (+1 more)
mock-connector-apis/: README.md  package.json  server.js
src/backend/: Cargo.toml  clippy.toml
src/backend/libs/insight-clickhouse/src/: config.rs  query.rs
src/backend/plugins/oidc-authn-plugin/src/: config.rs  module.rs
src/backend/plugins/oidc-authn-plugin/src/domain/: service.rs
src/backend/services/analytics-api/: Dockerfile  fix-seed-aggregation.sql
src/backend/services/analytics-api/helm/: values.yaml
src/backend/services/analytics-api/helm/templates/: deployment.yaml  secret.yaml
src/backend/services/analytics-api/sql/: insight-views.sql
src/backend/services/analytics-api/src/: auth.rs  config.rs  main.rs
src/backend/services/analytics-api/src/api/: handlers.rs  mod.rs
src/backend/services/analytics-api/src/domain/: metric.rs  query.rs  threshold.rs
src/backend/services/analytics-api/src/infra/: mod.rs
src/backend/services/analytics-api/src/infra/db/: entities.rs
src/backend/services/analytics-api/src/infra/identity/: mod.rs
src/backend/services/analytics-api/src/infra/identity_resolution/: mod.rs
src/backend/services/analytics-api/src/migration/: m20260414_000001_init.rs  m20260421_000001_seed_git_metric.rs  m20260422_000001_seed_metrics.rs  m20260423_000001_seed_metrics_honest_nulls.rs  m20260428_000001_collab_metrics_update.rs  m20260430_000001_update_git_bullet.rs  m20260515_000001_task_delivery_bullet_rewrite.rs  mod.rs
src/backend/services/api-gateway/: Cargo.toml  Dockerfile  README.md
src/backend/services/api-gateway/config/: insight.yaml  no-auth.yaml
src/backend/services/api-gateway/helm/: values.yaml
src/backend/services/api-gateway/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
src/backend/services/api-gateway/specs/: DESIGN.md
src/backend/services/api-gateway/src/: auth_info.rs  proxy.rs
src/backend/services/identity/: .dockerignore  .env.local.example  .gitignore  Cargo.toml  Directory.Build.props  Dockerfile  Insight.Identity.sln  global.json
src/backend/services/identity/helm/: Chart.yaml  values.yaml
src/backend/services/identity/helm/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
src/backend/services/identity/seed/: seed-persons-from-identity-input.py  seed-persons.sh
src/backend/services/identity/src/: config.rs  lib.rs  main.rs  people.rs
src/backend/services/identity/src/Insight.Identity.Api/: Insight.Identity.Api.csproj  Program.cs  appsettings.yaml
src/backend/services/identity/src/Insight.Identity.Api/Auth/: CompositeTenantContext.cs  ConfigTenantContext.cs  HeaderTenantContext.cs  ITenantContext.cs  JwtTenantContext.cs
src/backend/services/identity/src/Insight.Identity.Api/Configuration/: AppOptions.cs
src/backend/services/identity/src/Insight.Identity.Api/Contracts/: PersonResponse.cs  ProblemResponse.cs
src/backend/services/identity/src/Insight.Identity.Api/Endpoints/: PersonsEndpoints.cs
src/backend/services/identity/src/Insight.Identity.Domain/: Insight.Identity.Domain.csproj  Person.cs  PersonObservation.cs  ValueTypes.cs
src/backend/services/identity/src/Insight.Identity.Domain/Services/: DisplayNameSplitter.cs  IPersonsReader.cs  PersonAssembler.cs  PersonLookupService.cs
src/backend/services/identity/src/Insight.Identity.Infrastructure/: Insight.Identity.Infrastructure.csproj  MigrationRunner.cs
src/backend/services/identity/src/Insight.Identity.Infrastructure/MariaDb/: MariaDbConnectionFactory.cs  MariaDbOptions.cs  PersonsRepository.cs  Sql.cs
src/backend/services/identity/src/Insight.Identity.Infrastructure/Migrations/: 001_persons.sql  002_account_person_map.sql
src/backend/services/identity/tests/: Directory.Build.props  api.rs
src/backend/services/identity/tests/Insight.Identity.Tests.Integration/: Insight.Identity.Tests.Integration.csproj  MariaDbConnectivityTests.cs  MariaDbFixture.cs  PersonsEndpointTests.cs  TestApplicationFactory.cs
src/backend/services/identity/tests/Insight.Identity.Tests.Unit/: DisplayNameSplitterTests.cs  Insight.Identity.Tests.Unit.csproj  MariaDbConnectionFactoryTests.cs  PersonAssemblerTests.cs
src/ingestion/connectors/ai/github-copilot/: Dockerfile  README.md  descriptor.yaml  pyproject.toml
src/ingestion/connectors/ai/github-copilot/source_github_copilot/: __init__.py  auth.py  source.py  spec.json
src/ingestion/connectors/ai/github-copilot/source_github_copilot/streams/: __init__.py  base.py  org_metrics.py  seats.py  user_metrics.py
src/ingestion/connectors/crm/salesforce/: Dockerfile  README.md  connector.yaml  descriptor.yaml  pyproject.toml
src/ingestion/connectors/crm/salesforce/dbt/: to_crm_activities.sql  to_crm_deals.sql
src/ingestion/connectors/crm/salesforce/dbt.disabled/: salesforce__crm_accounts.sql  salesforce__crm_activities.sql  salesforce__crm_contacts.sql  salesforce__crm_deals.sql  salesforce__crm_users.sql  schema.yml
src/ingestion/connectors/crm/salesforce/source_salesforce/: __init__.py  api.py  availability_strategy.py  constants.py  envelope.py  exceptions.py  rate_limiting.py  source.py  spec.json  streams.py
(+441 files in other folders)
