[package]
name = "insight-api-gateway"
version = "0.1.0"
description = "Insight API Gateway — entry point for all backend services"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "insight-api-gateway"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# cyberfabric core
modkit = { workspace = true, features = ["bootstrap"] }

# System modules (linked via inventory for runtime discovery)
api-gateway-module = { workspace = true }
authn-resolver = { workspace = true }
authz-resolver = { workspace = true }
tenant-resolver = { workspace = true }
grpc-hub = { workspace = true }
module-orchestrator = { workspace = true }
types-registry = { workspace = true }
types-registry-sdk = { workspace = true }

# Plugins
static-authz-plugin = { workspace = true }
single-tenant-tr-plugin = { workspace = true }
oidc-authn-plugin = { path = "../../plugins/oidc-authn-plugin" }

# Auth info + proxy modules
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
async-trait = { workspace = true }
axum = "0.8"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Runtime
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
