[package]
name = "identity-resolution"
version = "0.1.0"
description = "Identity Resolution stub — serves person data from BambooHR bronze layer"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "identity-resolution"
path = "src/main.rs"

[lib]
name = "identity_resolution"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
insight-clickhouse = { workspace = true }

axum = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
