[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "source-github-copilot"
version = "0.1.0"
description = "Airbyte source connector for GitHub Copilot Admin API (CDK)"
requires-python = ">=3.10"
dependencies = [
    "airbyte-cdk>=7.16.0",
    "requests>=2.31.0",
]

[project.scripts]
source-github-copilot = "source_github_copilot.source:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source_github_copilot*"]
